Fixing Search bar on Mobile

--- a/flask-nginx-rtmp-mgmt/static/css/main.css
+++ b/flask-nginx-rtmp-mgmt/static/css/main.css
@@ -107,7 +107,7 @@
 
     .searchBar {
         position:relative;
-        left:9%;
+        left:8%;
     }
 }
 
